<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/main_background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/root_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5.0dip">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <pro.asdgroup.bizon.view.CircleImageView
                    android:id="@+id/profile_photo"
                    android:layout_width="70.0dip"
                    android:layout_height="90.0dip"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="10.0dip"
                    android:src="@drawable/no_image"
                    android:scaleType="centerCrop"/>

                <EditText
                    android:id="@+id/surname_edit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80.0dip"
                    android:layout_marginTop="10.0dip"
                    android:hint="@string/pp_surname"
                    android:inputType="textCapSentences"
                    android:singleLine="true"/>

                <EditText
                    android:id="@+id/name_edit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/surname_edit"
                    android:layout_marginLeft="80.0dip"
                    android:inputType="textCapSentences"
                    android:layout_marginTop="5.0dip"
                    android:hint="@string/pp_name"
                    android:singleLine="true"/>
            </RelativeLayout>

            <EditText
                android:id="@+id/mid_name_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pp_mid_name"
                android:inputType="textCapSentences"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/about_user_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pp_about_user"/>

            <EditText
                android:id="@+id/city_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pp_city"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/email_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pp_email"
                android:singleLine="true"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/phone_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pp_phone"
                android:inputType="phone"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/vk_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pp_vk"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/skype_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pp_skype"
                android:singleLine="true"/>

            <pro.asdgroup.bizon.view.DetailTextView
                android:id="@+id/company_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:titleText="@string/pp_company"/>

            <EditText
                android:id="@+id/tags_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pp_tags"/>
        </LinearLayout>

        <Button
            android:id="@+id/save_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/dark_green"
            android:text="@string/pp_save"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</ScrollView>