<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:clickable="true"
    android:background="@color/main_background">

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/cp_name"/>

    <EditText
        android:id="@+id/activities_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/cp_activities"/>

    <EditText
        android:id="@+id/website_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/cp_website_url"/>

    <EditText
        android:id="@+id/about_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:hint="@string/cp_about"/>

    <Button
        android:id="@+id/save_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/dark_green"
        android:text="@string/pp_save"
        android:textColor="@android:color/white"/>
</LinearLayout>
</ScrollView>