<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_background"
    android:orientation="vertical"
    android:padding="10.0dip"
    android:clickable="true">

    <pro.asdgroup.bizon.view.DetailTextView
        android:id="@+id/name_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:titleText="@string/cp_name"/>

    <pro.asdgroup.bizon.view.DetailTextView
        android:id="@+id/business_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:titleText="@string/cp_activities"/>

    <pro.asdgroup.bizon.view.DetailTextView
        android:id="@+id/website_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:titleText="@string/cp_website_url"/>

    <pro.asdgroup.bizon.view.DetailTextView
        android:id="@+id/about_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:titleText="@string/cp_about"/>
</LinearLayout>