<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <include layout="@layout/toolbar"/>

    <info.hoang8f.android.segmented.SegmentedGroup
        xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
        android:id="@+id/segmented_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        segmentedgroup:border_width="2dp"
        segmentedgroup:corner_radius="5dp"
        segmentedgroup:tint_color="@color/dark_red"
        android:layout_below="@+id/toolbar"
        android:gravity="center_horizontal">

        <RadioButton
            android:id="@+id/all_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ep_community_sc_title"
            android:checked="true"
            style="@style/SegmentedControlRadioButton" />

        <RadioButton
            android:id="@+id/my_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ep_contacts_sc_title"
            style="@style/SegmentedControlRadioButton" />
    </info.hoang8f.android.segmented.SegmentedGroup>

    <ListView
        android:id="@+id/contact_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/segmented_control"
        android:layout_above="@+id/send_btn"/>

    <Button
        android:id="@+id/send_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/dark_green"
        android:text="@string/ep_send_invitations_btn"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>